<resources>
    <string name="app_name">TizenConsumerSAAgentV2</string>

    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello Accessory!</string>
    <string name="ConnectionEstablishedMsg">Service Connection with AccessoryProvider has been established.</string>
    <string name="ConnectionTerminateddMsg">Service Connection with AccessoryProvider has been terminated.</string>
    <string name="ConnectionAlreadyExist">Service Connection with AccessoryProvider has already been existed!!!</string>
    <string name="ConnectionAlreadyDisconnected">Service Connection with AccessoryProvider has already been disconnected!!!</string>
    <string name="ConnectionFailure">Service Connection with AccessoryProvider Failure</string>
    <string name="NoPeersFound">No peers have been found!!!</string>
    <string name="ConnectionEstablishedMsg2">Service Connection with MessageProvider has been established.</string>
    <string name="ConnectionTerminateddMsg2">Service Connection with MessageProvider has been terminated.</string>
    <string name="ConnectionAlreadyExist2">Service Connection with MessageProvider has already been existed!!!</string>
    <string name="ConnectionAlreadyDisconnected2">Service Connection with MessageProvider has already been disconnected!!!</string>
    <string name="ConnectionFailure2">Service Connection with MessageProvider Failure</string>
    <string name="NoPeersFound2">No peers have been found!!!</string>
    <string name="buttonConnect">Connect</string>
    <string name="buttonDisconnect">Disconnect</string>
    <string name="buttonFindPeerAgent">Find PeerAgent</string>
    <string name="buttonSend">Send</string>

    <string name="send">Send</string>
    <string name="seek_and_connect">Seek and Connect</string>
    <string name="cancel">Cancel</string>
    <string name="cancelAll">Cancel All</string>

    <string name="title_activity_accessory">Accessory(C)</string>
    <string name="title_activity_message">Message(C)</string>
    <string name="title_activity_file_transfer">File Transfer(C)</string>
</resources>